tests/integration/conformance/testdata/networking/virtualService/basic/input.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-bound-route
spec:
  hosts:
    - uk.bookinfo.com
  gateways:
    - istio-system/istio-ingressgateway # pinned to ingress gateway only
  http:
    - match:
        - port: 80
        - port: 443
      route:
        - destination:
            host: c
            subset: v2
            port:
              number: 80
  tcp:
    - match:
        - port: 31400
      route:
        - destination:
            host: c
            subset: v1
            port:
              number: 90
