tests/integration/conformance/testdata/networking/virtualService/basic/mcp.yaml
constraints:
  - collection: istio/networking/v1alpha3/virtualservices
    check:
      - exactlyOne:
          - equals: {
            "Body": {
              "gateways": [
                "istio-system/istio-ingressgateway"
              ],
              "hosts": [
                "uk.bookinfo.com"
              ],
              "http": [
              {
                "match": [
                {
                  "port": 80
                },
                {
                  "port": 443
                }
                ],
                "route": [
                {
                  "destination": {
                    "host": "c",
                    "port": {
                      "Port": {
                        "Number": 80
                      }
                    },
                    "subset": "v2"
                  }
                }
                ]
              }
              ],
              "tcp": [
              {
                "match": [
                {
                  "port": 31400
                }
                ],
                "route": [
                {
                  "destination": {
                    "host": "c",
                    "port": {
                      "Port": {
                        "Number": 90
                      }
                    },
                    "subset": "v1"
                  }
                }
                ]
              }
              ]
            },
            "Metadata": {
              "name": "{{.Namespace}}/gateway-bound-route"
            },
            "TypeURL": "type.googleapis.com/istio.networking.v1alpha3.VirtualService"
          }
